# symex

./: .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  README.md
doc/: KNOWNBUG  doit  filter  symex.regression.log.txt
regression/: Makefile
regression/goto-cc-symex/: Makefile  chain.sh
regression/goto-cc-symex/regenerate-entry-function/: test.desc
regression/symex/: Makefile
regression/symex-infeasibility/: Makefile
regression/symex-infeasibility/counter-unsafe/: test.desc
regression/symex-infeasibility/path-merge/: test.desc
regression/symex-infeasibility/the-adder/: test.desc
regression/symex-infeasibility/tp5/: main.c
regression/symex-shortest-path/: Makefile
regression/symex-shortest-path/function_pointer1/: main.c
regression/symex-shortest-path/pointer2/: main.c
regression/symex-shortest-path/pointer3/: main.c
regression/symex-shortest-path/stop-on-fail1/: main.c
regression/symex-shortest-path/struct1/: main.c
regression/symex-shortest-path/struct3/: main.c
regression/symex-shortest-path/va_args_11/: main.c
regression/symex/array1/: dynamic_array.c  dynamic_array.desc  global_array.desc  local_array.c  local_array.desc
src/: CMakeLists.txt  Makefile  config.inc  setup_submodules.sh
src/goto-locs/: CMakeLists.txt  Makefile  loc_ref.h  locs.cpp  locs.h  loop_heads.cpp  loop_heads.h
src/jsymex/: CMakeLists.txt  jsymex_main.cpp  jsymex_parse_options.cpp  jsymex_parse_options.h
src/path-symex/: Makefile  build_goto_trace.cpp  build_goto_trace.h  evaluate_address_of.cpp  evaluate_address_of.h  loc_ref.h  locs.cpp  locs.h  path_symex.cpp  path_symex_allocate.cpp  path_symex_class.h  path_symex_config.cpp  path_symex_config.h  path_symex_error.h  path_symex_history.cpp  path_symex_history.h  path_symex_state.cpp  path_symex_state.h  path_symex_state_read.cpp  symex_dereference.cpp  symex_dereference.h  var_map.cpp  var_map.h
src/symex/: CMakeLists.txt  Makefile  path_search.cpp  path_search.h  shortest_path_graph.cpp  shortest_path_graph.h  show_vcc.cpp  symex_cover.cpp  symex_parse_options.cpp  symex_parse_options.h
(+15 files in other folders)
